# API_AGILPAGOS

./: .gitignore  pyproject.toml
app/: config.py  dependencies.py  main.py
app/core/: exceptions.py  http_client.py  security.py
app/models/: alias_models.py  auth.py  auth_models.py  borrar-alias_models.py  common.py  consultas_models.py  cuentas.py  cuentas_models.py  maasoft_models.py  maestros.py  maestros_models.py  onboarding.py  onboarding_models.py  transferencias_models.py
app/routers/: __init__.py  alias_routers.py  auth.py  auth_routers.py  borrar-alias_routers.py  consultas_routers.py  cuentas.py  cuentas_routers.py  maasoft_routers.py  maestros.py  maestros_router.py  onboarding.py  onboarding_routers.py  test.py  test_routers.py
app/services/: __init__.py  alias_service.py  auth_service.py  borrar-alias_service.py  consultas_service.py  cuentas_service.py  maasoft_service.py  maestros_service.py  onboarding_service.py
app/utils/: validators.py
