[project]
name = "api-agilpagos"
version = "0.1.0"
description = "API Intermedia para comsumir los servicios de AgilPagos"
readme = "README.md"
requires-python = ">=3.14.5"

authors = [
	{ name = "MAAS Sistemas", email = "info@maas.com" },
	{ name = "NeuralDevs", email = "info@neuraldevs.com" }
]

dependencies = [
    "fastapi[standard]>=0.137.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
